# Key-Value-Store

./: CMakeLists.txt  README.md
src/client/: main.cpp
src/kvstore/: DiskStorage.cpp  DiskStorage.hpp  KVStore.cpp  KVStore.hpp
src/kvstore/cache/: Cache.cpp  Cache.hpp  FIFOCache.cpp  FIFOCache.hpp  LFUCache.cpp  LFUCache.hpp  LRUCache.cpp  LRUCache.hpp
src/server/: ClientHandler.hpp  main.cpp
test/: cache_tests.hpp  disk_storage_tests.hpp  kvstore_tests.hpp  main.cpp
